# photokit-ayak-yalayanlar

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml
sample_images/: README.md
src/photokit/: __init__.py  cli.py  registry.py
src/photokit/filters/: __init__.py  base.py  blur.py  grayscale.py  sepia.py
src/photokit/utils/: __init__.py  io.py
tests/: test_grayscale.py
workshop/: kurulum-rehberi.md  photokit-workshop.html
